docs/1.2/_sources/reference/generated/pynetdicom.association.Association.rst.txt
pynetdicom.association.Association
==================================

.. currentmodule:: pynetdicom.association

.. autoclass:: Association

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~Association.__init__
      ~Association.abort
      ~Association.debug_association_aborted
      ~Association.debug_association_accepted
      ~Association.debug_association_rejected
      ~Association.debug_association_released
      ~Association.debug_association_requested
      ~Association.getName
      ~Association.isAlive
      ~Association.isDaemon
      ~Association.is_alive
      ~Association.join
      ~Association.kill
      ~Association.release
      ~Association.request
      ~Association.run
      ~Association.send_c_cancel
      ~Association.send_c_echo
      ~Association.send_c_find
      ~Association.send_c_get
      ~Association.send_c_move
      ~Association.send_c_store
      ~Association.send_n_action
      ~Association.send_n_create
      ~Association.send_n_delete
      ~Association.send_n_event_report
      ~Association.send_n_get
      ~Association.send_n_set
      ~Association.setDaemon
      ~Association.setName
      ~Association.set_socket
      ~Association.start
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Association.accepted_contexts
      ~Association.acse_timeout
      ~Association.ae
      ~Association.daemon
      ~Association.dimse_timeout
      ~Association.ident
      ~Association.is_acceptor
      ~Association.is_requestor
      ~Association.local
      ~Association.mode
      ~Association.name
      ~Association.network_timeout
      ~Association.rejected_contexts
      ~Association.remote
   
   